--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -16,12 +16,12 @@
 	%f_c_title{ font-family: 'Josefin Sans', sans-serif; font-size: 3rem;font-weight: 100 }
 	%f_d_title{ font-family: 'Josefin Sans', sans-serif; font-size: 2rem;font-weight: 100 }
 	%f_d_content{ font-family: 'Josefin Sans', serif; font-size: 1.8rem;font-weight: 100 }
-	%f_w_list{ font-family: 'visitor', cursive; font-size: 2rem }
-	%f_aside_buttons{font-family: 'visitor', cursive; font-size: 2.2rem}
-	%f_p_title{ font-family: 'visitor', cursive; font-size: 2.2rem }
-	%f_p_subtitle{ font-family: 'visitor', cursive; font-size: 1.6rem }
+	%f_w_list{ font-family: 'visitor', sans-serif; font-size: 2rem }
+	%f_aside_buttons{font-family: 'visitor', sans-serif; font-size: 2.2rem}
+	%f_p_title{ font-family: 'visitor', sans-serif; font-size: 2.2rem }
+	%f_p_subtitle{ font-family: 'visitor', sans-serif; font-size: 1.6rem }
 	%f_p_content{ font-family: 'Josefin Sans', sans-serif; font-size: 1.8rem }
-	%f_p_buttons{ font-family: 'visitor', cursive; font-size: 1.8rem }
+	%f_p_buttons{ font-family: 'visitor', sans-serif; font-size: 1.8rem }
 
 
 /* DEFAULTS
